# spotiamp-plus

./: .gitignore  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json  vite.config.js
docs/screenshots/: README.md
scripts/: make-update-manifest.mjs
skins/: Sony_Esprit_V2.wsz
src/: NumberDisplay.svelte  TextTicker.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_window.rs  discord.rs  eq.rs  eq_window.rs  eqf.rs  lib.rs  library_window.rs  lists.rs  loopback.rs  lyrics_window.rs  main.rs  oauth.rs  player_window.rs  settings.rs  sink.rs  smtc.rs  smtc_publish.rs  spotify.rs  visualizer.rs  visualizer_window.rs  wsz.rs
src/lib/: common.svelte.js  events.svelte.js  playlist.svelte.js  spotify.svelte.js  visualizer.svelte.js  window-docking.svelte.js
src/routes/: +layout.svelte  global.css
src/routes/eq/: +page.svelte
src/routes/login-proxy/: +page.svelte
src/routes/lyrics/: +page.svelte
src/routes/player/: +page.js  +page.svelte
src/routes/playlist/: +page.js  +page.svelte
src/routes/visualizer/: +page.svelte
